# ros-engineer-assessment

./: README.md
task1_tf2_frame_management/src/tf2_goal_task/: CMakeLists.txt  README_task1.md  package.xml
task1_tf2_frame_management/src/tf2_goal_task/src/: tf_manager_node.cpp
task2_nav2_controller_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
task2_nav2_controller_plugin/Config/: nav2_params.yaml
task2_nav2_controller_plugin/include/nav2_simple_controller/: simple_controller.hpp
task2_nav2_controller_plugin/src/: simple_controller.cpp
task3_action_vs_service/: CMakeLists.txt  README.md  package.xml
task3_action_vs_service/action/: GoToCharger.action
task3_action_vs_service/src/: action_client.cpp  action_server.cpp  service_client.cpp  service_server.cpp
task3_action_vs_service/srv/: GoToCharger.srv
